# Blackdog

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  blackdog.toml  pyproject.toml
.blackdog/: backlog-index.html  backlog-state.json  backlog.md  events.jsonl
.codex/skills/blackdog/: SKILL.md
.codex/skills/blackdog-backlog/: SKILL.md
.codex/skills/blackdog-backlog/agents/: openai.yaml
.codex/skills/blackdog/agents/: openai.yaml
.codex/skills/blackdog/references/: task-shaping.md
docs/: ACCEPTANCE.md  ARCHITECTURE.md  BOUNDARIES.md  CHARTER.md  CLI.md  EMACS.md  EXTRACTION_AUDIT.md  FILE_FORMATS.md  INDEX.md  INTEGRATION.md  MIGRATION.md  MODULE_INVENTORY.md  OWNERSHIP_INVENTORY.md  PRODUCT_SPEC.md  RELEASE_NOTES.md  REPO_LIFECYCLE_MVP.md  SINGLE_AGENT_AUDIT.md  SUPERVISED_EXECUTION_TARGET.md  TARGET_MODEL.md  TARGET_MODEL_EXECUTION_PLAN.md  architecture-diagrams.html
editors/emacs/: README.md
editors/emacs/lisp/: blackdog-artifacts.el  blackdog-codex.el  blackdog-core.el  blackdog-dashboard.el  blackdog-magit.el  blackdog-results.el  blackdog-runs.el  blackdog-search.el  blackdog-spec.el  blackdog-task.el  blackdog-telemetry.el  blackdog-thread.el  blackdog.el
editors/emacs/templates/: blackdog-spec.md
editors/emacs/test/: blackdog-test.el
editors/emacs/test/fixtures/: blackdog-snapshot.json
editors/emacs/test/fixtures/supervisor-runs/20260327-140022-8df46a17/: status.json
editors/emacs/test/fixtures/supervisor-runs/20260327-140022-8df46a17/BLACK-5036e0095a/: metadata.json  prompt.txt
editors/emacs/test/fixtures/task-results/BLACK-5036e0095a/: 20260327-140149-2b8f9123.json
extensions/emacs/: README.md
extensions/emacs/lisp/: blackdog-artifacts.el  blackdog-core.el  blackdog-dashboard.el  blackdog-runs.el  blackdog-spec.el  blackdog-thread.el  blackdog.el
extensions/emacs/templates/: blackdog-spec.md
extensions/emacs/test/: blackdog-test.el
extensions/emacs/test/fixtures/: blackdog-snapshot.json
extensions/emacs/test/fixtures/supervisor-runs/20260327-140022-8df46a17/BLACK-5036e0095a/: prompt.txt
extensions/emacs/test/fixtures/task-results/BLACK-5036e0095a/: 20260327-140149-2b8f9123.json
scripts/: benchmark_env_handlers.py
src/blackdog/: __init__.py  architecture.py  backlog.py  board.py  cli.py  config.py  contract.py  conversations.py  execution_context.py  handlers.py  installs.py  prompting.py  repo_lifecycle.py  scaffold.py  skill_cli.py  store.py  supervisor.py  supervisor_policy.py  threads.py  tuning.py  ui.css  ui.py  workset_manager.py  worktree.py  wtam.py
src/blackdog/core/: __init__.py  backlog.py  config.py  store.py
src/blackdog/proper/: __init__.py  scaffold.py  supervisor.py  supervisor_policy.py  threads.py  tuning.py  ui.py  worktree.py
src/blackdog_cli/: __init__.py  main.py
src/blackdog_core/: __init__.py  backlog.py  profile.py  runtime_model.py  snapshot.py  state.py
tests/: core_audit_support.py  test_blackdog_cli.py  test_core_backlog.py  test_core_backlog_flows.py  test_core_config.py  test_core_contracts.py  test_core_store.py  test_core_store_helpers.py  test_core_worktree.py  test_env_handlers.py  test_repo_lifecycle.py  test_runtime_model.py
