[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blackdog"
version = "0.1.0"
description = "Repo-scoped backlog CLI for AI-assisted local development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
blackdog = "blackdog.cli:main"
blackdog-core = "blackdog.cli:main_core"
blackdog-proper = "blackdog.cli:main_proper"
blackdog-devtool = "blackdog.cli:main_devtool"
blackdog-skill = "blackdog.skill_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
blackdog = ["ui.css"]

[tool.setuptools.packages.find]
where = ["src"]
# Keep one distribution while extracting internal `blackdog.*`
# subpackages behind the documented core/proper/viewers/adapters split.
include = ["blackdog", "blackdog.*"]

[tool.blackdog.coverage]
artifact_output = "coverage/latest.json"
# Phase 0 freezes the shipped core audit surface and evidence command.
# Numeric gating stays documented-only until the direct core semantics tests
# close the remaining gaps called out in docs/FILE_FORMATS.md.
# Focus the audit surface on core state and backlog semantics; broad CLI,
# supervisor, scaffold, and UI coverage stays in the repo-wide test suite.
shipped_surface = [
  "src/blackdog/core/backlog.py",
  "src/blackdog/core/config.py",
  "src/blackdog/core/store.py",
]
