[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blackdog"
version = "0.1.0"
description = "Repo-scoped workset runtime for AI-assisted local development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
blackdog = "blackdog_cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
# Keep one distribution while the repo ships three explicit Python packages:
# `blackdog_core` for the durable contract, `blackdog` for WTAM orchestration,
# and `blackdog_cli` for the command adapter.
include = ["blackdog", "blackdog.*", "blackdog_core", "blackdog_core.*", "blackdog_cli", "blackdog_cli.*"]
